PWCT Project/First Generation/Applications/Projects/HarbourPWCT_SupernovaProgrammingLanguage/Samples/Errors/NoObjectDefined.nova
i want window
the button caption is wow.